project/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okd-in-use-project-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9091
  selector:
    app: okd-in-use-project-app
