project/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okd-in-use-project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "okd-in-use-nginx.apps.private.okd4.teh-1.snappcloud.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okd-in-use-project-svc
                port:
                  number: 9091
